[gd_scene load_steps=6 format=3 uid="uid://d3m9vxqnhqy4z"]

[ext_resource type="Script" path="res://sandbox/test_components/player_movement_controller.gd" id="1_player"]
[ext_resource type="Script" path="res://militia_forge/core/component_host.gd" id="2_host"]
[ext_resource type="Script" path="res://militia_forge/components/movement/topdown_movement.gd" id="3_movement"]
[ext_resource type="Script" path="res://sandbox/test_scenes/topdown_movement_test_controller.gd" id="4_controller"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_player"]
size = Vector2(32, 32)

[node name="TopDownMovementTest" type="Node2D"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 510.0
offset_bottom = 320.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "MilitiaForge2D - TopDown Movement Test"

[node name="HSeparator" type="HSeparator" parent="UI/Panel/VBoxContainer"]
layout_mode = 2

[node name="Velocity" type="Label" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Velocity: (0.0, 0.0)"

[node name="Speed" type="Label" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
text = "Speed: 0.0 px/s"

[node name="Direction" type="Label" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
text = "Direction: (0.0, 0.0)"

[node name="State" type="Label" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
text = "State: Idle"

[node name="Sprint" type="Label" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
text = "Sprint: OFF"

[node name="HSeparator2" type="HSeparator" parent="UI/Panel/VBoxContainer"]
layout_mode = 2

[node name="Position" type="Label" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
text = "Position: (0, 0)"

[node name="HSeparator3" type="HSeparator" parent="UI/Panel/VBoxContainer"]
layout_mode = 2

[node name="Instructions" type="Label" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
text = "Controls:
[WASD] or [Arrow Keys] - Move
[Shift] - Sprint
[1] - Toggle Normalize Diagonal
[2] - Increase Max Speed
[3] - Decrease Max Speed
[D] - Debug Print
[R] - Reset Position
[Q] - Quit"

[node name="Settings" type="Label" parent="UI/Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.596078, 0.941176, 0.439216, 1)
text = "Normalize Diagonal: ON
Max Speed: 200.0"

[node name="Player" type="CharacterBody2D" parent="." groups=["player"]]
position = Vector2(640, 360)
script = ExtResource("1_player")

[node name="ComponentHost" type="Node2D" parent="Player"]
script = ExtResource("2_host")

[node name="TopDownMovement" type="Node" parent="Player/ComponentHost"]
script = ExtResource("3_movement")
max_speed = 200.0
acceleration = 1000.0
friction = 800.0
normalize_diagonal = true
sprint_enabled = true
sprint_multiplier = 1.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_player")

[node name="Sprite" type="ColorRect" parent="Player"]
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
color = Color(0.235294, 0.639216, 0.909804, 1)

[node name="DirectionIndicator" type="Line2D" parent="Player"]
points = PackedVector2Array(0, 0, 0, -30)
width = 3.0
default_color = Color(0.941176, 0.439216, 0.439216, 1)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(1.5, 1.5)

[node name="Ground" type="ColorRect" parent="."]
offset_left = -500.0
offset_top = -500.0
offset_right = 1780.0
offset_bottom = 1220.0
color = Color(0.180392, 0.211765, 0.247059, 1)

[node name="GridLines" type="Node2D" parent="."]
modulate = Color(0.3, 0.3, 0.3, 0.3)

[node name="TestController" type="Node" parent="."]
script = ExtResource("4_controller")
